src/main/java/saif/parser/MiniJavaParser.java
/* Generated By:JavaCC: Do not edit this line. MiniJavaParser.java */
  package saif.parser;


  import saif.compiler.syntaxtree.*;
  public class MiniJavaParser implements MiniJavaParserConstants {

// The following is a simple grammar that will allow you
// to test the generated lexer.
/*
void Goal() :
{}
{
  ( MiniJavaToken() )*
  <EOF>
}

void MiniJavaToken():
{}
{
  "{" | "public" | "static" | "void" |
  "main" | "(" | "String"  | "[" | "]" | ")" | "}" | "extends" | ";"
  | "return" | "," | "int" | "boolean" | "=" | "if" | "else" | "while"
  | "System.out.println" | "&&" | "<" | "+" | "-" | "*" | "." |
  "length" | <INTEGER_LITERAL> | "true" | "false" | "this" | "new" |
  "!"
}
*/
//adding parser
  static final public Program Program() throws ParseException {
        MainClass mainClass;
        ClassDeclList classDeclList = new ClassDeclList();
        ClassDecl classDecl;
    mainClass = MainClass();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      classDecl = ClassDecl();
                                                      classDeclList.addElement(classDecl);
    }
    jj_consume_token(0);
                {if (true) return new Program(mainClass, classDeclList);}
    throw new Error("Missing return statement in function");
  }

//rule for main class
  static final public MainClass MainClass() throws ParseException {
        Identifier className;
        Identifier args;
        Statement statement;
    jj_consume_token(CLASS);
    className = Identifier();
    jj_consume_token(LBRACE);
    jj_consume_token(PUBLIC);
    jj_consume_token(STATIC);
    jj_consume_token(VOID);
    jj_consume_token(MAIN);
    jj_consume_token(LPAREN);
    jj_consume_token(STRING);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
    args = Identifier();
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    statement = Statement();
    jj_consume_token(RBRACE);
    jj_consume_token(RBRACE);
        {if (true) return new MainClass(className, args, statement);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassDecl ClassDecl() throws ParseException {
 ClassDecl classDecl;
    if (jj_2_1(3)) {
      classDecl = ClassDeclSimple();
                                                     {if (true) return classDecl;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CLASS:
        classDecl = ClassExtendsDeclaration();
                                                 {if (true) return classDecl;}
        break;
      default:
        jj_la1[1] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

//rule for class other than main
  static final public ClassDeclSimple ClassDeclSimple() throws ParseException {
        Identifier className;
        VarDeclList varDeclList = new VarDeclList();
        VarDecl varDecl;
        MethodDeclList methodList = new MethodDeclList();
        MethodDecl methodDecl;
    jj_consume_token(CLASS);
    className = Identifier();
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOLEAN:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      varDecl = VarDecl();
                              varDeclList.addElement(varDecl);
    }
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      methodDecl = MethodDecl();
                                            methodList.addElement(methodDecl);
    }
    jj_consume_token(RBRACE);
        {if (true) return new ClassDeclSimple(className, varDeclList, methodList);}
    throw new Error("Missing return statement in function");
  }

  static final public ClassExtendsDeclaration ClassExtendsDeclaration() throws ParseException {
        Identifier className;
        Identifier baseClass;
        VarDeclList varDeclList = new VarDeclList();
        VarDecl varDecl;
        MethodDeclList methodList = new MethodDeclList();
        MethodDecl methodDecl;
    jj_consume_token(CLASS);
    className = Identifier();
    jj_consume_token(EXTENDS);
    baseClass = Identifier();
    jj_consume_token(LBRACE);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case INT:
      case BOOLEAN:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      varDecl = VarDecl();
                                      varDeclList.addElement(varDecl);
    }
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PUBLIC:
        ;
        break;
      default:
        jj_la1[5] = jj_gen;
        break label_5;
      }
      methodDecl = MethodDecl();
                                            methodList.addElement(methodDecl);
    }
    jj_consume_token(RBRACE);
                {if (true) return new ClassExtendsDeclaration(className, baseClass, varDeclList, methodList);}
    throw new Error("Missing return statement in function");
  }

  static final public VarDecl VarDecl() throws ParseException {
 Type t; Identifier id;
    t = Type();
    id = Identifier();
    jj_consume_token(SEMICOLON);
        {if (true) return new VarDecl(t, id);}
    throw new Error("Missing return statement in function");
  }

  static final public MethodDecl MethodDecl() throws ParseException {
 Type returnType;
 Identifier methodName;
 FormalList parameterList = null;
 VarDeclList variableList = new VarDeclList();
 StatementList statementList = new StatementList();
 Exp returnExpr;
 Statement stmt;
 VarDecl varDecl;
    jj_consume_token(PUBLIC);
    returnType = Type();
    methodName = Identifier();
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
    case BOOLEAN:
    case IDENTIFIER:
      parameterList = FormalList();
      break;
    default:
      jj_la1[6] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
    jj_consume_token(LBRACE);
    label_6:
    while (true) {
      if (jj_2_2(2)) {
        ;
      } else {
        break label_6;
      }
      varDecl = VarDecl();
                                           variableList.addElement(varDecl);
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case LBRACE:
      case PRINTLN:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_7;
      }
      stmt = Statement();
                             statementList.addElement(stmt);
    }
    jj_consume_token(RETURN);
    returnExpr = Exp();
    jj_consume_token(SEMICOLON);
    jj_consume_token(RBRACE);
        {if (true) return new MethodDecl(returnType, methodName, parameterList, variableList,
                        statementList, returnExpr);}
    throw new Error("Missing return statement in function");
  }

  static final public FormalList FormalList() throws ParseException {
 FormalList list = new FormalList(); FormalParameter fp;
    fp = FormalParameter();
                                list.addElement(fp);
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_8;
      }
      fp = FormalRest();
                            list.addElement(fp);
    }
                {if (true) return list;}
    throw new Error("Missing return statement in function");
  }

  static final public FormalParameter FormalParameter() throws ParseException {
 Type type; Token t;
    type = Type();
    t = jj_consume_token(IDENTIFIER);
                {if (true) return new FormalParameter(type, new Identifier(t.image));}
    throw new Error("Missing return statement in function");
  }

  static final public FormalParameter FormalRest() throws ParseException {
 FormalParameter formal;
    jj_consume_token(COMMA);
    formal = FormalParameter();
        {if (true) return formal;}
    throw new Error("Missing return statement in function");
  }

  static final public Type Type() throws ParseException {
 Type t;
    if (jj_2_3(2)) {
      t = IntArrayType();
                                     {if (true) return t;}
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case BOOLEAN:
        t = BooleanType();
                         {if (true) return t;}
        break;
      case INT:
        t = IntegerType();
                         {if (true) return t;}
        break;
      case IDENTIFIER:
        t = IdentifierType();
                            {if (true) return t;}
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public IdentifierType IdentifierType() throws ParseException {
 Token t;
    t = jj_consume_token(IDENTIFIER);
                {if (true) return new IdentifierType(t.image);}
    throw new Error("Missing return statement in function");
  }

  static final public IntArrayType IntArrayType() throws ParseException {
    jj_consume_token(INT);
    jj_consume_token(LBRACKET);
    jj_consume_token(RBRACKET);
                {if (true) return new IntArrayType();}
    throw new Error("Missing return statement in function");
  }

  static final public BooleanType BooleanType() throws ParseException {
    jj_consume_token(BOOLEAN);
                {if (true) return new BooleanType();}
    throw new Error("Missing return statement in function");
  }

  static final public IntegerType IntegerType() throws ParseException {
    jj_consume_token(INT);
                {if (true) return new IntegerType();}
    throw new Error("Missing return statement in function");
  }

  static final public Statement Statement() throws ParseException {
 Statement stmt;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      stmt = Block();
                    {if (true) return stmt;}
      break;
    default:
      jj_la1[10] = jj_gen;
      if (jj_2_4(2)) {
        stmt = AssignmentStatement();
                                                 {if (true) return stmt;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IDENTIFIER:
          stmt = ArrayAssignmentStatement();
                                         {if (true) return stmt;}
          break;
        case IF:
          stmt = IfStatement();
                            {if (true) return stmt;}
          break;
        case WHILE:
          stmt = WhileStatement();
                               {if (true) return stmt;}
          break;
        case PRINTLN:
          stmt = PrintStatement();
                               {if (true) return stmt;}
          break;
        default:
          jj_la1[11] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }

  static final public Block Block() throws ParseException {
 StatementList stmtList = new StatementList(); Statement stmt;
    jj_consume_token(LBRACE);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IF:
      case WHILE:
      case LBRACE:
      case PRINTLN:
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_9;
      }
      stmt = Statement();
                                      stmtList.addElement(stmt);
    }
    jj_consume_token(RBRACE);
                {if (true) return new Block(stmtList);}
    throw new Error("Missing return statement in function");
  }

  static final public AssignmentStatement AssignmentStatement() throws ParseException {
 Token t; Exp exp;
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(EQUAL);
    exp = Exp();
    jj_consume_token(SEMICOLON);
        {if (true) return new AssignmentStatement(new Identifier(t.image), exp);}
    throw new Error("Missing return statement in function");
  }

  static final public ArrayAssignmentStatement ArrayAssignmentStatement() throws ParseException {
 Token t; Exp exp1, exp2;
    t = jj_consume_token(IDENTIFIER);
    jj_consume_token(LBRACKET);
    exp1 = Exp();
    jj_consume_token(RBRACKET);
    jj_consume_token(EQUAL);
    exp2 = Exp();
    jj_consume_token(SEMICOLON);
                {if (true) return new ArrayAssignmentStatement(new Identifier(t.image), exp1, exp2);}
    throw new Error("Missing return statement in function");
  }

  static final public IfStatement IfStatement() throws ParseException {
 Exp exp; Statement stmt1, stmt2;
    jj_consume_token(IF);
    jj_consume_token(LPAREN);
    exp = Exp();
    jj_consume_token(RPAREN);
    stmt1 = Statement();
    jj_consume_token(ELSE);
    stmt2 = Statement();
                {if (true) return new IfStatement(exp, stmt1, stmt2);}
    throw new Error("Missing return statement in function");
  }

  static final public WhileStatement WhileStatement() throws ParseException {
 Exp exp; Statement stmt;
    jj_consume_token(WHILE);
    jj_consume_token(LPAREN);
    exp = Exp();
    jj_consume_token(RPAREN);
    stmt = Statement();
                        {if (true) return new WhileStatement(exp, stmt);}
    throw new Error("Missing return statement in function");
  }

  static final public PrintStatement PrintStatement() throws ParseException {
 Exp exp;
    jj_consume_token(PRINTLN);
    jj_consume_token(LPAREN);
    exp = Exp();
    jj_consume_token(RPAREN);
    jj_consume_token(SEMICOLON);
                {if (true) return new PrintStatement(exp);}
    throw new Error("Missing return statement in function");
  }

//Expression list
  static final public ExpList ExpList() throws ParseException {
 ExpList expList = new ExpList(); Exp exp;
    exp = Exp();
                expList.addElement(exp);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_10;
      }
      exp = ExpRest();
                                                            expList.addElement(exp);
    }
    {if (true) return expList;}
    throw new Error("Missing return statement in function");
  }

  static final public Exp ExpRest() throws ParseException {
 Exp ex;
    jj_consume_token(COMMA);
    ex = Exp();
                        {if (true) return ex;}
    throw new Error("Missing return statement in function");
  }

//Expression
//rewriting Exp part to correct the problem
  static final public Exp Exp() throws ParseException {
 Exp exp;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER_LITERAL:
      exp = IntegerLiteral();
      if (jj_2_5(2)) {
        exp = ExpPrime(exp);
      } else {
        ;
      }
                                                                    {if (true) return exp;}
      break;
    case LPAREN:
      exp = BracketExpression();
      if (jj_2_6(2)) {
        exp = ExpPrime(exp);
      } else {
        ;
      }
                                                                         {if (true) return exp;}
      break;
    case NOT:
      exp = NotExpression();
      if (jj_2_7(2)) {
        exp = ExpPrime(exp);
      } else {
        ;
      }
                                                                     {if (true) return exp;}
      break;
    default:
      jj_la1[14] = jj_gen;
      if (jj_2_14(2)) {
        exp = NewObject();
        if (jj_2_8(2)) {
          exp = ExpPrime(exp);
        } else {
          ;
        }
                                                                              {if (true) return exp;}
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case NEW:
          exp = NewArray();
          if (jj_2_9(2)) {
            exp = ExpPrime(exp);
          } else {
            ;
          }
                                                                {if (true) return exp;}
          break;
        case THIS:
          exp = ThisExpression();
          if (jj_2_10(2)) {
            exp = ExpPrime(exp);
          } else {
            ;
          }
                                                                      {if (true) return exp;}
          break;
        case IDENTIFIER:
          exp = IdentifierExpression();
          if (jj_2_11(2)) {
            exp = ExpPrime(exp);
          } else {
            ;
          }
                                                                            {if (true) return exp;}
          break;
        case FALSE:
          exp = FalseLiteral();
          if (jj_2_12(2)) {
            exp = ExpPrime(exp);
          } else {
            ;
          }
                                                                    {if (true) return exp;}
          break;
        case TRUE:
          exp = TrueLiteral();
          if (jj_2_13(2)) {
            exp = ExpPrime(exp);
          } else {
            ;
          }
                                                                   {if (true) return exp;}
          break;
        default:
          jj_la1[15] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    throw new Error("Missing return statement in function");
  }
